--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <div class="content">
-            <h1>Como ser um pro player de Free Fire 100% GRATUITO</h1>
+            <h1 class="title">Como ser um pro player de Free Fire 100% GRATUITO</h1>
             <div class="video-container">
                 <div class="overlay">
                     <div class="content">
@@ -21,7 +21,7 @@
                     </div>
                     <div class="progress"></div>
                 </div>
-                <video preload="auto" autoplay src="/assets/video.mp4"></video>
+                <video preload="auto" autoplay src="https://github.com/miguelpereira-dev/plr-simple-page/blob/master/assets/video.mp4?raw=true"></video>
             </div>
             <a class="cta hidden" href="#">
                 <span>Quero obter acesso</span>
